<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listfutebolRowModel" type="com.tiagosapplication.app.modules.configurationscreen.data.model.ListfutebolRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRowfutebol"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <LinearLayout android:id="@+id/linearTagFutebol"
            android:layout_height="wrap_content"
            android:layout_weight="0.48" android:layout_width="0dp"
            android:orientation="horizontal" style="@style/groupStylegray_500cornerRadius">
            <TextView android:ellipsize="end"
                android:id="@+id/txtFutebol"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_weight="0.79" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{listfutebolRowModel.txtFutebol}"
                style="@style/txtJetBrainsMonoitalicregular20_1" tools:text="@string/lbl_futebol"/>
            <FrameLayout android:id="@+id/frameStackrectangletwelve"
                android:layout_height="@dimen/_27pxv"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginEnd="@dimen/_11pxh"
                android:layout_marginStart="@dimen/_7pxh"
                android:layout_marginTop="@dimen/_2pxv" android:layout_width="@dimen/_26pxh">
                <View
                    android:background="@drawable/rectangle_bg_bluegray_100_radius_6"
                    android:id="@+id/viewRectangleTwelve"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_26pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginTop="@dimen/_1pxv" android:layout_width="@dimen/_26pxh"/>
                <TextView android:ellipsize="end"
                    android:gravity="top|start"
                    android:id="@+id/txtSixteen"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_1pxh"
                    android:layout_marginStart="@dimen/_1pxh"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{listfutebolRowModel.txtSixteen}"
                    style="@style/txtJetBrainsMonoitalicregular20_1" tools:text="@string/lbl_16"/>
            </FrameLayout>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearTagAcademia"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5pxh"
            android:layout_weight="0.52" android:layout_width="0dp"
            android:orientation="horizontal" style="@style/groupStylegray_500cornerRadius">
            <TextView android:ellipsize="end"
                android:id="@+id/txtAcademia"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_2pxv"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.81" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{listfutebolRowModel.txtAcademia}"
                style="@style/txtJetBrainsMonoitalicregular20_1" tools:text="@string/lbl_academia"/>
            <FrameLayout android:id="@+id/frameStackrectangletwelveOne"
                android:layout_height="@dimen/_27pxv"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginEnd="@dimen/_9pxh"
                android:layout_marginStart="@dimen/_12pxh"
                android:layout_marginTop="@dimen/_2pxv" android:layout_width="@dimen/_26pxh">
                <View
                    android:background="@drawable/rectangle_bg_bluegray_100_radius_6"
                    android:id="@+id/viewRectangleTwelveOne"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_26pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginTop="@dimen/_1pxv" android:layout_width="@dimen/_26pxh"/>
                <TextView android:ellipsize="end"
                    android:gravity="top|start"
                    android:id="@+id/txtThirteen"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_1pxh"
                    android:layout_marginStart="@dimen/_1pxh"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{listfutebolRowModel.txtThirteen}"
                    style="@style/txtJetBrainsMonoitalicregular20_1" tools:text="@string/lbl_13"/>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
